--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 DEBUG=True
-SECRET_KEY=mdbee-test
-DATABASE_NAME=postgres
-DATABASE_USER=postgres
-DATABASE_PASSWORD=a
-DATABASE_HOST=localhost
+SECRET_KEY=your-secret-key
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=a
+DATABASE_HOST=db
 DATABASE_PORT=5432
